--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -7,7 +7,7 @@
       "lint": "./node_modules/.bin/eslint",
       "check-lint": "lint [0-9]*.js",
       "test": "./node_modules/.bin/mocha --require @babel/register --exit",
-      "dev": "nodemon --exec babel-node --presets @babel/preset-env"
+      "dev": "nodemon --exec babel-node --presets @babel/preset-env1-redis_op.js "
     },
     "author": "",
     "license": "ISC",
